# weave

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  PrintSystemInfo.cmake  Sanitizers.cmake
weave/: CMakeLists.txt
weave/threads/: atomic.hpp  mem_ord.hpp  thread.hpp
weave/threads/sync/: spinlock.hpp
